src/databricks/labs/remorph/parsers/proto/generated/Protobuf3Parser.py
# Generated from src/databricks/labs/remorph/parsers/proto/Protobuf3.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Protobuf3Parser ( Parser ):

    grammarFileName = "Protobuf3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'syntax'", "'import'", "'weak'", "'public'", 
                     "'package'", "'option'", "'optional'", "'repeated'", 
                     "'oneof'", "'map'", "'int32'", "'int64'", "'uint32'", 
                     "'uint64'", "'sint32'", "'sint64'", "'fixed32'", "'fixed64'", 
                     "'sfixed32'", "'sfixed64'", "'bool'", "'string'", "'double'", 
                     "'float'", "'bytes'", "'reserved'", "'to'", "'max'", 
                     "'enum'", "'message'", "'service'", "'extend'", "'rpc'", 
                     "'stream'", "'returns'", "'\"proto3\"'", "''proto3''", 
                     "';'", "'='", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'<'", "'>'", "'.'", "','", "':'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "SYNTAX", "IMPORT", "WEAK", "PUBLIC", 
                      "PACKAGE", "OPTION", "OPTIONAL", "REPEATED", "ONEOF", 
                      "MAP", "INT32", "INT64", "UINT32", "UINT64", "SINT32", 
                      "SINT64", "FIXED32", "FIXED64", "SFIXED32", "SFIXED64", 
                      "BOOL", "STRING", "DOUBLE", "FLOAT", "BYTES", "RESERVED", 
                      "TO", "MAX", "ENUM", "MESSAGE", "SERVICE", "EXTEND", 
                      "RPC", "STREAM", "RETURNS", "PROTO3_LIT_SINGLE", "PROTO3_LIT_DOBULE", 
                      "SEMI", "EQ", "LP", "RP", "LB", "RB", "LC", "RC", 
                      "LT", "GT", "DOT", "COMMA", "COLON", "PLUS", "MINUS", 
                      "STR_LIT", "BOOL_LIT", "FLOAT_LIT", "INT_LIT", "IDENTIFIER", 
                      "WS", "LINE_COMMENT", "COMMENT" ]

    RULE_proto = 0
    RULE_syntax = 1
    RULE_importStatement = 2
    RULE_packageStatement = 3
    RULE_optionStatement = 4
    RULE_optionName = 5
    RULE_fieldLabel = 6
    RULE_field = 7
    RULE_fieldOptions = 8
    RULE_fieldOption = 9
    RULE_fieldNumber = 10
    RULE_oneof = 11
    RULE_oneofField = 12
    RULE_mapField = 13
    RULE_keyType = 14
    RULE_type_ = 15
    RULE_reserved = 16
    RULE_ranges = 17
    RULE_range_ = 18
    RULE_reservedFieldNames = 19
    RULE_topLevelDef = 20
    RULE_enumDef = 21
    RULE_enumBody = 22
    RULE_enumElement = 23
    RULE_enumField = 24
    RULE_enumValueOptions = 25
    RULE_enumValueOption = 26
    RULE_messageDef = 27
    RULE_messageBody = 28
    RULE_messageElement = 29
    RULE_extendDef = 30
    RULE_serviceDef = 31
    RULE_serviceElement = 32
    RULE_rpc = 33
    RULE_constant = 34
    RULE_blockLit = 35
    RULE_emptyStatement_ = 36
    RULE_ident = 37
    RULE_fullIdent = 38
    RULE_messageName = 39
    RULE_enumName = 40
    RULE_fieldName = 41
    RULE_oneofName = 42
    RULE_mapName = 43
    RULE_serviceName = 44
    RULE_rpcName = 45
    RULE_messageType = 46
    RULE_enumType = 47
    RULE_intLit = 48
    RULE_strLit = 49
    RULE_boolLit = 50
    RULE_floatLit = 51
    RULE_keywords = 52

    ruleNames =  [ "proto", "syntax", "importStatement", "packageStatement", 
                   "optionStatement", "optionName", "fieldLabel", "field", 
                   "fieldOptions", "fieldOption", "fieldNumber", "oneof", 
                   "oneofField", "mapField", "keyType", "type_", "reserved", 
                   "ranges", "range_", "reservedFieldNames", "topLevelDef", 
                   "enumDef", "enumBody", "enumElement", "enumField", "enumValueOptions", 
                   "enumValueOption", "messageDef", "messageBody", "messageElement", 
                   "extendDef", "serviceDef", "serviceElement", "rpc", "constant", 
                   "blockLit", "emptyStatement_", "ident", "fullIdent", 
                   "messageName", "enumName", "fieldName", "oneofName", 
                   "mapName", "serviceName", "rpcName", "messageType", "enumType", 
                   "intLit", "strLit", "boolLit", "floatLit", "keywords" ]

    EOF = Token.EOF
    SYNTAX=1
    IMPORT=2
    WEAK=3
    PUBLIC=4
    PACKAGE=5
    OPTION=6
    OPTIONAL=7
    REPEATED=8
    ONEOF=9
    MAP=10
    INT32=11
    INT64=12
    UINT32=13
    UINT64=14
    SINT32=15
    SINT64=16
    FIXED32=17
    FIXED64=18
    SFIXED32=19
    SFIXED64=20
    BOOL=21
    STRING=22
    DOUBLE=23
    FLOAT=24
    BYTES=25
    RESERVED=26
    TO=27
    MAX=28
    ENUM=29
    MESSAGE=30
    SERVICE=31
    EXTEND=32
    RPC=33
    STREAM=34
    RETURNS=35
    PROTO3_LIT_SINGLE=36
    PROTO3_LIT_DOBULE=37
    SEMI=38
    EQ=39
    LP=40
    RP=41
    LB=42
    RB=43
    LC=44
    RC=45
    LT=46
    GT=47
    DOT=48
    COMMA=49
    COLON=50
    PLUS=51
    MINUS=52
    STR_LIT=53
    BOOL_LIT=54
    FLOAT_LIT=55
    INT_LIT=56
    IDENTIFIER=57
    WS=58
    LINE_COMMENT=59
    COMMENT=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProtoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def syntax(self):
            return self.getTypedRuleContext(Protobuf3Parser.SyntaxContext,0)


        def EOF(self):
            return self.getToken(Protobuf3Parser.EOF, 0)

        def importStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.ImportStatementContext)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.ImportStatementContext,i)


        def packageStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.PackageStatementContext)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.PackageStatementContext,i)


        def optionStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.OptionStatementContext)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.OptionStatementContext,i)


        def topLevelDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.TopLevelDefContext)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.TopLevelDefContext,i)


        def emptyStatement_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.EmptyStatement_Context)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.EmptyStatement_Context,i)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_proto

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProto" ):
                return visitor.visitProto(self)
            else:
                return visitor.visitChildren(self)




    def proto(self):

        localctx = Protobuf3Parser.ProtoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_proto)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.syntax()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 282930970724) != 0):
                self.state = 112
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2]:
                    self.state = 107
                    self.importStatement()
                    pass
                elif token in [5]:
                    self.state = 108
                    self.packageStatement()
                    pass
                elif token in [6]:
                    self.state = 109
                    self.optionStatement()
                    pass
                elif token in [29, 30, 31, 32]:
                    self.state = 110
                    self.topLevelDef()
                    pass
                elif token in [38]:
                    self.state = 111
                    self.emptyStatement_()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(Protobuf3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SyntaxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYNTAX(self):
            return self.getToken(Protobuf3Parser.SYNTAX, 0)

        def EQ(self):
            return self.getToken(Protobuf3Parser.EQ, 0)

        def SEMI(self):
            return self.getToken(Protobuf3Parser.SEMI, 0)

        def PROTO3_LIT_SINGLE(self):
            return self.getToken(Protobuf3Parser.PROTO3_LIT_SINGLE, 0)

        def PROTO3_LIT_DOBULE(self):
            return self.getToken(Protobuf3Parser.PROTO3_LIT_DOBULE, 0)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_syntax

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyntax" ):
                return visitor.visitSyntax(self)
            else:
                return visitor.visitChildren(self)




    def syntax(self):

        localctx = Protobuf3Parser.SyntaxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_syntax)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(Protobuf3Parser.SYNTAX)
            self.state = 120
            self.match(Protobuf3Parser.EQ)
            self.state = 121
            _la = self._input.LA(1)
            if not(_la==36 or _la==37):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 122
            self.match(Protobuf3Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(Protobuf3Parser.IMPORT, 0)

        def strLit(self):
            return self.getTypedRuleContext(Protobuf3Parser.StrLitContext,0)


        def SEMI(self):
            return self.getToken(Protobuf3Parser.SEMI, 0)

        def WEAK(self):
            return self.getToken(Protobuf3Parser.WEAK, 0)

        def PUBLIC(self):
            return self.getToken(Protobuf3Parser.PUBLIC, 0)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_importStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = Protobuf3Parser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(Protobuf3Parser.IMPORT)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3 or _la==4:
                self.state = 125
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 128
            self.strLit()
            self.state = 129
            self.match(Protobuf3Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(Protobuf3Parser.PACKAGE, 0)

        def fullIdent(self):
            return self.getTypedRuleContext(Protobuf3Parser.FullIdentContext,0)


        def SEMI(self):
            return self.getToken(Protobuf3Parser.SEMI, 0)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_packageStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageStatement" ):
                return visitor.visitPackageStatement(self)
            else:
                return visitor.visitChildren(self)




    def packageStatement(self):

        localctx = Protobuf3Parser.PackageStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_packageStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(Protobuf3Parser.PACKAGE)
            self.state = 132
            self.fullIdent()
            self.state = 133
            self.match(Protobuf3Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPTION(self):
            return self.getToken(Protobuf3Parser.OPTION, 0)

        def optionName(self):
            return self.getTypedRuleContext(Protobuf3Parser.OptionNameContext,0)


        def EQ(self):
            return self.getToken(Protobuf3Parser.EQ, 0)

        def constant(self):
            return self.getTypedRuleContext(Protobuf3Parser.ConstantContext,0)


        def SEMI(self):
            return self.getToken(Protobuf3Parser.SEMI, 0)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_optionStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionStatement" ):
                return visitor.visitOptionStatement(self)
            else:
                return visitor.visitChildren(self)




    def optionStatement(self):

        localctx = Protobuf3Parser.OptionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_optionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(Protobuf3Parser.OPTION)
            self.state = 136
            self.optionName()
            self.state = 137
            self.match(Protobuf3Parser.EQ)
            self.state = 138
            self.constant()
            self.state = 139
            self.match(Protobuf3Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fullIdent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.FullIdentContext)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.FullIdentContext,i)


        def LP(self):
            return self.getToken(Protobuf3Parser.LP, 0)

        def RP(self):
            return self.getToken(Protobuf3Parser.RP, 0)

        def DOT(self):
            return self.getToken(Protobuf3Parser.DOT, 0)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_optionName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionName" ):
                return visitor.visitOptionName(self)
            else:
                return visitor.visitChildren(self)




    def optionName(self):

        localctx = Protobuf3Parser.OptionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_optionName)
        self._la = 0 # Token type
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 54, 57]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.fullIdent()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(Protobuf3Parser.LP)
                self.state = 143
                self.fullIdent()
                self.state = 144
                self.match(Protobuf3Parser.RP)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==48:
                    self.state = 145
                    self.match(Protobuf3Parser.DOT)
                    self.state = 146
                    self.fullIdent()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldLabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPTIONAL(self):
            return self.getToken(Protobuf3Parser.OPTIONAL, 0)

        def REPEATED(self):
            return self.getToken(Protobuf3Parser.REPEATED, 0)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_fieldLabel

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldLabel" ):
                return visitor.visitFieldLabel(self)
            else:
                return visitor.visitChildren(self)




    def fieldLabel(self):

        localctx = Protobuf3Parser.FieldLabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fieldLabel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not(_la==7 or _la==8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(Protobuf3Parser.Type_Context,0)


        def fieldName(self):
            return self.getTypedRuleContext(Protobuf3Parser.FieldNameContext,0)


        def EQ(self):
            return self.getToken(Protobuf3Parser.EQ, 0)

        def fieldNumber(self):
            return self.getTypedRuleContext(Protobuf3Parser.FieldNumberContext,0)


        def SEMI(self):
            return self.getToken(Protobuf3Parser.SEMI, 0)

        def fieldLabel(self):
            return self.getTypedRuleContext(Protobuf3Parser.FieldLabelContext,0)


        def LB(self):
            return self.getToken(Protobuf3Parser.LB, 0)

        def fieldOptions(self):
            return self.getTypedRuleContext(Protobuf3Parser.FieldOptionsContext,0)


        def RB(self):
            return self.getToken(Protobuf3Parser.RB, 0)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = Protobuf3Parser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 153
                self.fieldLabel()


            self.state = 156
            self.type_()
            self.state = 157
            self.fieldName()
            self.state = 158
            self.match(Protobuf3Parser.EQ)
            self.state = 159
            self.fieldNumber()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 160
                self.match(Protobuf3Parser.LB)
                self.state = 161
                self.fieldOptions()
                self.state = 162
                self.match(Protobuf3Parser.RB)


            self.state = 166
            self.match(Protobuf3Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldOptionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldOption(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Protobuf3Parser.FieldOptionContext)
            else:
                return self.getTypedRuleContext(Protobuf3Parser.FieldOptionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Protobuf3Parser.COMMA)
            else:
                return self.getToken(Protobuf3Parser.COMMA, i)

        def getRuleIndex(self):
            return Protobuf3Parser.RULE_fieldOptions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldOptions" ):
                return visitor.visitFieldOptions(self)
            else:
                return visitor.visitChildren(self)




    def fieldOptions(self):

        localctx = Protobuf3Parser.FieldOptionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fieldOptions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.fieldOption()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==49:
                self.state = 169
                self.match(Protobuf3Parser.COMMA)
                self.state = 170
                self.fieldOption()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldOptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optionName(self):
            return self.getTypedRuleContext(Protobuf3Parser.OptionNameContext,0)


        def EQ(self):
            return self.getToken(Protobuf3Parser.EQ, 0)

        def constant(self):
            return self.getTypedRuleContext(Protobuf3Parser.ConstantContext,0)


        def getRuleIndex(self):
            return Protobuf3Parser.RULE_fieldOption

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldOption" ):
                return visitor.visitFieldOption(self)
            else:
                return visitor.visitChildren(self)




    def fieldOption(self):

        localctx = Protobuf3Parser.FieldOptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fieldOption)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.optionName()
            self.state = 177
            self.match(Protobuf3Parser.EQ)
            self.state = 178
            self.constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldNumberContext(ParserRuleContext):
        __slots__ = 'parser'
